# Signal-bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  bot.py  check_question.py  commands.py  config.py  faqs.txt  fetch_appointments.py  i18n.py  pyproject.toml  query_llm.py  requirements.txt  storage.py  web_app.py
.github/: copilot-instructions.md
data/: .gitkeep
locales/: de.json  en_US.json  es.json  fr.json  ja.json  pt.json  zh_CN.json
templates/: index.html
tests/: test_bot.py  test_check_question.py  test_commands.py  test_fetch_appointments.py  test_i18n.py  test_query_llm.py  test_storage.py  test_web_app.py
